# quantum-magnetic-navigation

./: Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml
.roo/: mcp.json
examples/: mcp_client_example.py  mcp_client_example_fixed.py
locust/: locustfile.py
notebooks/: demo.ipynb
research/: README.md
scripts/: run-api.sh  run_mcp_server.py  run_mcp_server_fixed.py  sim_nav.py
src/qmag_nav/: __init__.py  _compat.py  cli.py
src/qmag_nav/filter/: __init__.py  ekf.py  utils.py
src/qmag_nav/mapping/: __init__.py  backend.py  interpolate.py
src/qmag_nav/mcp/: README.md  __init__.py  server.py
src/qmag_nav/mcp/tools/: __init__.py  magnetic_field.py  position_estimation.py  sensor_calibration.py  trajectory_simulation.py
src/qmag_nav/mcp/transport/: __init__.py  stdio.py
src/qmag_nav/models/: __init__.py  geo.py  map.py  sensor.py
src/qmag_nav/sensor/: __init__.py  magnetometer.py  mock.py
src/qmag_nav/service/: __init__.py  api.py
tests/: conftest.py  test_build_backend.py  test_build_system.py  test_cli.py  test_ekf.py  test_geo.py  test_installation.py  test_integration.py  test_integration_api.py  test_interpolation.py  test_mapping.py  test_mapping_enhanced.py  test_mapping_files.py  test_mcp_config.py  test_mcp_server.py  test_performance.py  test_sanity.py  test_sensor.py  test_service.py
tests/data/: 5x5_grid.nc  5x5_grid.tif  create_test_data.py  debug_interpolation.py  inspect_geotiff.py  interpolation_values.json
