[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qmag_nav"
version = "0.1.0"
description = "Quantum Magnetic Navigation System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "QMag Team" },
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rasterio>=1.3.0",
    "xarray>=2023.1.0",
    "netCDF4>=1.6.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.70.0",
    "ruff>=0.0.270",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qmag_nav"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "ruff",
    "black",
    "mypy",
    "pre-commit",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=qmag_nav --cov-report=term-missing --cov-report=xml {args:tests}"
lint = "pre-commit run --all-files"
typecheck = "mypy --strict src tests"
format = "black src tests"
format-check = "black --check src tests"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "C4", "T20", "PT", "RET", "SIM"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"